base/eks_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blog
  namespace: default
spec:
  replicas: 3
  selector:           # deployment - pod 대응용
    matchLabels:
      app: django-blog
  template:           # 여기서부터 파드 템플릿
    metadata:
      labels:
        app: django-blog      # 파드의 라벨
    spec:
      #serviceAccountName: irsa-test # IRSA붙임
      containers:
    # django
      - name: web
        # image: seongdong/django_blog_web:k8s
        image: 448559955338.dkr.ecr.ap-northeast-2.amazonaws.com/app:31c994bd
        volumeMounts:
        - mountPath: /usr/src/app/_static
          name: static-volume
        - mountPath: /usr/src/app/_media
          name: media-volume
        ports :
        - containerPort: 8000

        command: ["sh", "-c"]
        args: ["python manage.py makemigrations && python manage.py migrate && python manage.py collectstatic && gunicorn django_blog_sdjo.wsgi:application --bind 0.0.0.0:8000"]
    
      - name: nginx
        image: seongdong/django_blog_nginx:local
        #image: 448559955338.dkr.ecr.ap-northeast-2.amazonaws.com/django-nginx:latest
        volumeMounts:
        - mountPath: /usr/src/app/_static
          name: static-volume
        - mountPath: /usr/src/app/_media
          name: media-volume
        ports :
        - containerPort: 80
      
      # securityContext:
      #   runAsUser: 1000

      volumes:
      - name: default
        emptyDir: {}
      - name: static-volume
        emptyDir: {}
      - name: media-volume
        emptyDir: {}
